company project name change with index.html

--- a/order.html
+++ b/order.html
@@ -123,7 +123,7 @@
                 <header class="row headercontain">
                     <nav class="flex space-between navbar">
                         <div class=" left flex">
-                            <a href="commpany project.html"> <img src="india.jpeg" alt="img err"/></a>
+                            <a href="index.html"> <img src="india.jpeg" alt="img err"/></a>
 
                             <ul class="flex item-center justifiy-center upper-case semibold">
                               <li> 
