--- a/contack.html
+++ b/contack.html
@@ -192,7 +192,7 @@ button:focus , .submit-btn:focus{
                 <header class="row headercontain">
                     <nav class="flex space-between navbar">
                         <div class=" left flex">
-                            <a href="commpany project.html"> <img src="india.jpeg" alt="img err"/></a>
+                            <a href="index.html"> <img src="india.jpeg" alt="img err"/></a>
 
                             <ul class="flex item-center justifiy-center upper-case semibold">
                               <li> 
